new endpoints added, review and partners
